--- a/assets/sass/pages/index.sass
+++ b/assets/sass/pages/index.sass
@@ -1,10 +1,10 @@
 .main
-  height: 100vh
+  min-height: 100vh
 
   &__card
     background-color: rgb(250, 252, 250)
     width: 100%
-    height: 80vh
+    height: auto
     border-radius: 24px
     padding: 40px
 
